[package]
name = "camera_calibration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argmin = { version = "0.5", features = ["nalgebral"] }
nalgebra = { version = "0.30", features = ["serde-serialize"] }
rand = "0.8"
serde = "1.0"
